# authenticated_encryption

./: README.md
source_code/benchmark/: Cargo.toml  Makefile  README.md  build.rs
source_code/benchmark/benches/: base.mk  my_benchmark.rs
source_code/benchmark/benches/aead/: aead.h  aead.hpp
source_code/benchmark/benches/aead/aead_par_split/: Cargo.toml  Makefile  build.rs
source_code/benchmark/benches/aead/aead_xor_deadbeef/: Makefile  aead_xor_deadbeef.cpp
source_code/benchmark/benches/aead/aes-256-ctr_blake3/: Makefile  ___Makefile  aes-256-ctr_blake3.c
source_code/benchmark/benches/aead/aes-256-ctr_sha-256/: Makefile  aes-256-ctr_sha-256.c
source_code/benchmark/benches/aead/baseline_aes_256_gcm/: Makefile  aes_256_gcm.c
source_code/benchmark/benches/aead/cryptopp_gcm/: Makefile  cryptopp_gcm.cpp
source_code/benchmark/benches/aead/rustcrypto_aes_256_blake3/: Cargo.toml  Makefile
source_code/benchmark/benches/aead/rustcrypto_aes_256_gcm/: Cargo.toml  Makefile
source_code/benchmark/benches/encryption/: compile_all.sh  encryption.h  encryption.hpp
source_code/benchmark/benches/encryption/aes_128_cfb/: Makefile  aes_128_cfb.c
source_code/benchmark/benches/encryption/aes_128_cfb128/: Makefile  aes_128_cfb128.c
source_code/benchmark/benches/encryption/aes_128_ctr/: Makefile  aes_128_ctr.c
source_code/benchmark/benches/encryption/aes_128_ofb/: Makefile  aes_128_ofb.c
source_code/benchmark/benches/encryption/aes_192_cfb/: Makefile  aes_192_cfb.c
source_code/benchmark/benches/encryption/aes_192_cfb128/: Makefile  aes_192_cfb128.c
source_code/benchmark/benches/encryption/aes_192_ctr/: Makefile  aes_192_ctr.c
source_code/benchmark/benches/encryption/aes_192_ofb/: Makefile  aes_192_ofb.c
source_code/benchmark/benches/encryption/aes_256_cfb/: Makefile  aes_256_cfb.c
source_code/benchmark/benches/encryption/aes_256_cfb128/: Makefile  aes_256_cfb128.c
source_code/benchmark/benches/encryption/aes_256_ctr/: Makefile  aes_256_ctr.c
source_code/benchmark/benches/encryption/aes_256_ofb/: Makefile  aes_256_ofb.c
source_code/benchmark/benches/encryption/chacha20/: Makefile  chacha20.cpp
source_code/benchmark/benches/encryption/chacha20_simd/: Makefile  chacha20.c  chacha20.h  chacha20_avx2.c  chacha20_avx512.c  entry.cpp
source_code/benchmark/benches/encryption/xor_deadbeef/: Makefile  xor_deadbeef.cpp
source_code/benchmark/benches/hash/: hash.hpp
source_code/benchmark/benches/hash/blake2b512/: Makefile  blake2b512.c
source_code/benchmark/benches/hash/blake2s256/: Makefile  blake2s256.c
source_code/benchmark/benches/hash/blake3/: Makefile
source_code/benchmark/benches/hash/blake3_the2nd/: Makefile  blake3_the2nd.c  blake3hash.cpp
source_code/benchmark/benches/hash/blake3rust/: Cargo.toml  Makefile
source_code/benchmark/benches/hash/cryptopp_ghash/: Makefile  cryptopp_ghash.cpp
source_code/benchmark/benches/hash/ghash_rust/: Cargo.toml  Makefile
source_code/benchmark/benches/hash/gmac/: Makefile  gmac.c
source_code/benchmark/benches/hash/md5/: Makefile  md5.c
source_code/benchmark/benches/hash/sha3_224/: Makefile  sha3_224.c
source_code/benchmark/benches/hash/sha3_256/: Makefile  sha3_256.c
source_code/benchmark/benches/hash/sha3_384/: Makefile  sha3_384.c
source_code/benchmark/benches/hash/sha3_512/: Makefile  sha3_512.c
source_code/benchmark/benches/hash/sha_224/: Makefile  sha_224.c
source_code/benchmark/benches/hash/sha_256/: Makefile  sha_256.c
source_code/benchmark/benches/hash/sha_384/: Makefile  sha_384.c
source_code/benchmark/src/: helper.rs  lib.rs  main.rs
source_code/benchmark/src/helper/: config.rs  input_gen.rs  libraries.rs  param.rs
(+8597 files in other folders)
