[package]
name = "rustcrypto_aes_256_blake3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_with_rust = []

[lib]
crate-type   = ["rlib", "cdylib"] # ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
blake3 = "1.5.0"
ctr = "0.9"
subtle = { version = "2", default-features = false }

[profile.dev]
opt-level = 3

[profile.release]
# rustflags = ["-C", "target-cpu=native"] # TODO
codegen-units = 1
opt-level = 3
lto="fat"
panic = "abort"
strip = "debuginfo"
