[package]
name = "blake3rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name         = "blake3rust"
crate-type   = ["cdylib"] # ["rlib", "cdylib"]

[dependencies]
blake3 = { version = "1.5.0", features = ["rayon"] }
